[package]
name = "livesplit-one"
version = "0.2.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
livesplit-core = { git = "https://github.com/AlexKnauth/livesplit-core", branch = "legacy-xml-hack", features = ["font-loading", "software-rendering"] }
image = "0.25.0"
log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.85", features = ["derive", "rc"] }
serde_yaml = "0.9.14"
fern = "0.6.0"
chrono = { version = "0.4.0", features = ["serde", "clock"], default-features = false }
directories = "5.0.0"
backtrace = "0.3.61"
mimalloc = { version = "0.1.27", default-features = false }
once_cell = "1.16.0"
native-dialog = "0.7.0"
anyhow = "1.0.68"
fontdb = "0.16.2"

[build-dependencies]
embed-resource = "2.4"

[features]
default = ["auto-splitting"]
auto-splitting = ["livesplit-core/auto-splitting"]

[profile.max-opt]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1

[profile.max-opt.build-override]
opt-level = 0
