[package]
name = "livesplit-one"
version = "0.4.1"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid" }
livesplit-core = { git = "https://github.com/AlexKnauth/livesplit-core", branch = "legacy_raw_xml", features = ["font-loading", "software-rendering"] }
image = "0.25.5"
log = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
fern = "0.7.0"
chrono = { version = "0.4.38", features = ["serde", "clock"], default-features = false }
directories = "5.0.1"
backtrace = "0.3.74"
mimalloc = { version = "0.1.43", default-features = false }
once_cell = "1.20.2"
native-dialog = "0.7.0"
anyhow = "1.0.93"
fontdb = "0.16.2"
clap = { version = "4.5.20", features = ["derive"] }

[build-dependencies]
embed-resource = "3.0.1"

[features]
default = ["auto-splitting"]
auto-splitting = ["livesplit-core/auto-splitting"]

[profile.max-opt]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1

[profile.max-opt.build-override]
opt-level = 0
